# MusubiCAD

./: .gitattributes  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  quickstart.ps1  quickstart.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  design-review.yml  release.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/ui/: index.html  main.js  styles.css
docs/: release-quickstart.md
docs/adr/: ADR-001-rust-first.md  ADR-002-occt-backend.md  ADR-003-assembly-document-model.md  ADR-004-drawing-document-model.md
docs/api/: agent.md  drawing.md  git-native.md  render.md
docs/architecture/: assembly.md  design-graph.md  drawing.md  feature-modeling.md  geometry-kernel.md  git-native-workflow.md  ocad-format.md  overview.md  rendering.md  solver.md
docs/assets/: generate-review-demo.ps1  generate-review-demo.sh  generate.sh  verify-review-demo.sh
docs/assets/review-demo/: github-summary.md  review.html  review.json
docs/developer-guide/: desktop-ui.md  index.md  occt-install.md  preview-assets.md  releases.md
docs/examples/: patterns.md
docs/plans/: assembly-phase3-plan.md  drawing-phase4-plan.md  visual-showcase-plan.md
examples/: README.md
examples/agent/: assembly_spacing_patch.json  assign_face_ref_patch.json  bracket_policy.json  drawing_scale_patch.json  plane_face_ref_patch.json  query_semantic_ref_request.json  review_width_patch.json  spacing_expr_patch.json  width_patch.json
examples/assembly_two_brackets.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/assembly_two_brackets.ocad.d/graph/: assemblies.json  sketches.json
examples/assembly_two_brackets.ocad.d/parts/bracket.ocad.d/: checksums.json  (+1 more)
examples/bracket.ocad.d/: checksums.json
examples/bracket.ocad.d/graph/: semantic_refs.json
examples/bracket_boss_join.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_boss_join.ocad.d/graph/: constraints.json  features.json  semantic_refs.json  sketches.json
examples/bracket_edge_fillet.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_edge_fillet.ocad.d/graph/: assemblies.json  constraints.json  features.json
examples/bracket_face_pin.ocad.d/: checksums.json
examples/bracket_face_pin.ocad.d/graph/: constraints.json  features.json  sketches.json
examples/bracket_front_view.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_front_view.ocad.d/graph/: drawings.json  features.json  parameters.json
examples/bracket_hole_ring.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_hole_ring.ocad.d/graph/: features.json  sketches.json
examples/bracket_hole_row.ocad.d/: checksums.json
examples/bracket_pin_mirror.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_pin_mirror.ocad.d/graph/: features.json  parameters.json  semantic_refs.json  sketches.json
examples/bracket_pin_ring.ocad.d/: checksums.json
examples/bracket_pin_ring.ocad.d/graph/: constraints.json  features.json  sketches.json
examples/bracket_pin_row.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_pin_row.ocad.d/graph/: constraints.json  features.json  parameters.json  sketches.json
examples/revolve_bushing.ocad.d/: checksums.json
examples/revolve_bushing.ocad.d/graph/: constraints.json  features.json  parameters.json  sketches.json
examples/revolve_sector.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/revolve_sector.ocad.d/graph/: features.json  parameters.json  sketches.json
modules/ai/: Cargo.toml
modules/ai/src/: agent_api.rs  assembly.rs  drawing.rs  explain.rs  intent.rs  lib.rs  merge.rs  patch.rs  policy.rs  query.rs  state.rs  validation.rs
modules/assembly/: Cargo.toml
modules/assembly/src/: component.rs  connector.rs  dof.rs  instance.rs  lib.rs  mate.rs  model.rs  pattern.rs  pose.rs  regen.rs  residual.rs  solve.rs
modules/assembly/tests/: example_assembly.rs  write_example.rs
modules/cli/: Cargo.toml
modules/cli/src/: agent.rs  animate.rs  commands.rs  diff.rs  export.rs  git_workflow.rs  main.rs  mesh.rs  new.rs  pick.rs  policy_check.rs  regen.rs  review.rs  topo_sync.rs  view.rs
modules/cli/tests/: example_documents.rs
modules/core/src/: document.rs  id.rs  lib.rs  manifest.rs
modules/desktop/: Cargo.toml
modules/desktop/src/: fixture.rs  inspect.rs  lib.rs  parameters.rs  pick.rs  preview.rs  regen.rs  related_parameters.rs  scene_query.rs  template.rs  viewport.rs
modules/drawing/: Cargo.toml
modules/drawing/src/: dimension.rs  export_svg.rs  hidden_line.rs  lib.rs  model.rs  projection.rs  reference.rs  render.rs  sheet.rs  view.rs
modules/drawing/tests/: write_example.rs
modules/feature/src/: chamfer.rs  edge_discover.rs  extrude.rs  face_discover.rs  feature.rs  fillet.rs  hole.rs  lib.rs  param_apply.rs  pattern.rs  regenerate.rs  registry.rs  revolve.rs  topo_resolve.rs
modules/feature/tests/: occt_regen.rs
modules/file/: Cargo.toml
modules/file/src/: checksums.rs  diff.rs  document.rs  expanded_dir.rs  lib.rs  migrate.rs  patch.rs  topo_assign.rs
modules/file/tests/: example_documents.rs
modules/geometry/src/: kernel.rs  lib.rs  refs.rs  tessellation.rs  topo_sync.rs  transform.rs
modules/graph/: Cargo.toml
modules/graph/src/: diff.rs  lib.rs  param_eval.rs
modules/kernel-occt/src/: backend.rs  convert.rs  store.rs
modules/render/src/: animation.rs  ao.rs  edges.rs  face_catalog.rs  lib.rs  mesh.rs  presentation.rs  scene.rs  selection.rs  solid.rs  viewport.rs  wgpu_renderer.rs
modules/solver/src/: diagnostics.rs  dof.rs  jacobian.rs  lib.rs  numeric.rs  residual.rs
schemas/: ocad.assembly.schema.json  ocad.document.schema.json  ocad.drawing.schema.json  ocad.patch.schema.json
tools/: package-cli-release.ps1
(+5 files in other folders)
