[package]
name = "opencad-cli"
description = "OpenCAD command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "opencad"
path = "src/main.rs"

[features]
default = ["occt"]
occt = ["opencad-kernel-occt/occt", "opencad-file/occt"]

[dependencies]
opencad-ai = { workspace = true }
opencad-core = { workspace = true }
opencad-feature = { workspace = true }
opencad-file = { workspace = true }
opencad-geometry = { workspace = true }
opencad-graph = { workspace = true }
opencad-kernel-occt = { workspace = true }
opencad-render = { workspace = true }
opencad-sketch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
opencad-ai = { workspace = true }
opencad-kernel-occt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"

[lints]
workspace = true
