[package]
name = "opencad-desktop"
description = "Shared document preview and template helpers for MusubiCAD desktop UI"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["occt"]
occt = ["opencad-kernel-occt/occt", "opencad-file/occt"]

[dependencies]
opencad-core = { workspace = true }
opencad-assembly = { workspace = true }
opencad-drawing = { workspace = true }
opencad-feature = { workspace = true }
opencad-file = { workspace = true }
opencad-geometry = { workspace = true }
opencad-graph = { workspace = true }
opencad-kernel-occt = { workspace = true }
opencad-render = { workspace = true }
opencad-sketch = { workspace = true }
base64 = "0.22"
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
