[package]
name = "opencad-drawing"
description = "2D drawing documents with model references"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
opencad-core = { workspace = true }
opencad-geometry = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
opencad-feature = { workspace = true }
opencad-file = { workspace = true }
opencad-graph = { workspace = true }

[lints]
workspace = true
