[package]
name = "musubicad-desktop"
description = "MusubiCAD desktop viewer (Tauri)"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78"

[workspace]

[lib]
name = "musubicad_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "musubicad-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencad-core = { path = "../../../modules/core" }
opencad-desktop = { path = "../../../modules/desktop", features = ["occt"] }
opencad-render = { path = "../../../modules/render" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
